--- a/sample_submission.ipynb
+++ b/sample_submission.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "about-heavy",
-   "metadata": {},
    "source": [
     "## 0. Libarary 불러오기 및 경로설정"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cubic-scoop",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -26,33 +22,30 @@
     "\n",
     "from torchvision import transforms\n",
     "from torchvision.transforms import Resize, ToTensor, Normalize"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "built-elevation",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 테스트 데이터셋 폴더 경로를 지정해주세요.\n",
     "test_dir = '/opt/ml/input/data/eval'"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "quiet-organizer",
-   "metadata": {},
    "source": [
     "## 1. Model 정의"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acknowledged-easter",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class MyModel(nn.Module):\n",
     "    def __init__(self, num_classes: int = 1000):\n",
@@ -76,22 +69,20 @@
     "        x = torch.flatten(x, 1)\n",
     "        x = self.classifier(x)\n",
     "        return x"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "domestic-channels",
-   "metadata": {},
    "source": [
     "## 2. Test Dataset 정의"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "extensive-north",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class TestDataset(Dataset):\n",
     "    def __init__(self, img_paths, transform):\n",
@@ -107,30 +98,20 @@
     "\n",
     "    def __len__(self):\n",
     "        return len(self.img_paths)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "continued-feelings",
-   "metadata": {},
    "source": [
     "## 3. Inference"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "coral-shade",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test inference is done!\n"
-     ]
-    }
-   ],
    "source": [
     "# meta 데이터와 이미지 경로를 불러옵니다.\n",
     "submission = pd.read_csv(os.path.join(test_dir, 'info.csv'))\n",
@@ -139,9 +120,9 @@
     "# Test Dataset 클래스 객체를 생성하고 DataLoader를 만듭니다.\n",
     "image_paths = [os.path.join(image_dir, img_id) for img_id in submission.ImageID]\n",
     "transform = transforms.Compose([\n",
-    "    Resize((512, 384), Image.BILINEAR),\n",
-    "    ToTensor(),\n",
-    "    Normalize(mean=(0.5, 0.5, 0.5), std=(0.2, 0.2, 0.2)),\n",
+    "    # Resize((512, 384), Image.BILINEAR),\n",
+    "    ToTensor()\n",
+    "    # Normalize(mean=(0.5, 0.5, 0.5), std=(0.2, 0.2, 0.2)),\n",
     "])\n",
     "dataset = TestDataset(image_paths, transform)\n",
     "\n",
@@ -168,15 +149,24 @@
     "# 제출할 파일을 저장합니다.\n",
     "submission.to_csv(os.path.join(test_dir, 'submission.csv'), index=False)\n",
     "print('test inference is done!')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "test inference is done!\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "verbal-sample",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
